# pymame

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pymame/: __init__.py  commands.py  lxml_wrapper.py  mame.py  mame_ini.py  settings.py  typedefs.py  utils.py  xml_wrapper.py
pymame/commands/: __init__.py  executable.py  listxml.py  misc.py  software.py  verifyroms.py
pymame/elements/: __init__.py  common_elements.py  config.py  history_xml.py  machine_element.py  software_element.py  software_list_element.py
pymame/software_finder/: __init__.py  finder.py  hashes_finder.py  lazy_loaded_hashes.py
pymame/support_files/: __init__.py  cats.py  dat.py  history.py  mameinfo.py
pymame/user_data/: __init__.py  counters.py  favourites.py  timer_db.py
pymame/wrappers/: __init__.py  catlist.py  machine.py  software.py
