[project]
name = "pymame"
dynamic = ["version", "description"]
authors = [{ name = "Megan Leet" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
keywords = ["mame"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: Free for non-commercial use",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Typing :: Typed",
]
dependencies = [
	"pydantic-settings ~= 2.10.1",
	"async-lru ~= 2.0.5"
]

[project.urls]
Home = "https://github.com/Miss-Inputs/pymame"
Repository = "https://github.com/Miss-Inputs/pymame"

[project.optional-dependencies]
lxml = ["lxml"]

[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"
